# expert-succotash

./: .gitignore  Cargo.toml  README.md  justfile
.devcontainer/: compose.yaml  devcontainer.json  initdb.sql
apps/api/: .env.example  Cargo.toml  clippy.toml  rustfmt.toml
apps/api/.sqlx/: query-0372f573db3ced08570dc4e7ab3a9dbd7f30ed3ca1f32ca21cd68938eb7d2854.json  query-27de2908d81d46dfbbd4ba01985b24dd4d7564e8dbb62ab8e6e8a2cd0fb74f47.json  query-31f03668149956e1663de9f1ad565eac673d9331d0812909d8bda13c97caf517.json  query-b527a5f122911c63cd1bdf505eeda7b3f38d715f124f1162082ba4262e58e334.json  query-b8826152c537c1c6f553841e9836ee9891dbf73df73ddb24f7f63df25bd3b866.json  query-c6709b4627df84c56c14c48bca57b5b3ebe8d4a7ee2a3c969fc723a943767ea2.json  query-d7337da56977dbfcc4f5a859c72b3fdd5097386338c3c1dbbd97c726884f7645.json  query-e4fd163a2bf2f9c53a152b4b0d45a19087cfda4da6201077e0d023a29e59847e.json
apps/api/db/migrations/: .gitkeep  20251104145951_create_users_table.down.sql  20251104145951_create_users_table.sql  20251105142320_create_attendance_events.down.sql  20251105142320_create_attendance_events.sql
apps/api/src/: db.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  store.rs
apps/api/src/handlers/: mod.rs  user.rs
apps/api/src/repository/: attendance_event.rs  mod.rs  user.rs
apps/api/tests/: test_context_test.rs  todo_api_test.rs
apps/api/tests/helpers/: database.rs  mod.rs
apps/command/check-db/: Cargo.toml
apps/command/check-db/src/: main.rs
apps/command/list-tables/: Cargo.toml
apps/command/list-tables/src/: main.rs
